--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "mongodb": "^2.1.6",
+    "mongoose": "^4.6.2",
     "uuid": "^2.0.3"
   }
 }
