--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server/index.js",
+    "dev:start": "nodemon server/index.js"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "cors": "^2.8.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "mongodb": "^2.1.6",
     "mongoose": "^4.6.2",
     "uuid": "^2.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.10.2"
   }
 }
